--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.3",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.5",
     "@remix-run/css-bundle": "^2.15.0",
     "@remix-run/node": "^2.15.0",
